[project]
name = "ComfyUI-JEN"
description = ""
version = "1.0.0"
license = {file = "LICENSE.txt"}

[project.urls]
Repository = "https://github.com/futureversecom/ComfyUI-JEN"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "rwen"
DisplayName = "ComfyUI-JEN"
Icon = ""
