[project]
name = "comfyui-jen"
description = "Comfy UI custom nodes for JEN music generation powered by Futureverse"
version = "1.0.3"
license = {file = "LICENSE.txt"}

[project.urls]
Repository = "https://github.com/futureversecom/ComfyUI-JEN"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "rwen"
DisplayName = "ComfyUI-JEN"
Icon = ""
